# img-compression-mps

./: .gitignore  README.md  batch_dataset_compression.py  benchmark.py  compression_ssim_512_data.txt  dataset_compression.py  mps.py  my_analysis.py  pyproject.toml  requirements.txt  utils.py
Legacy/2D MPS Encoding/: mps_test.ipynb
Legacy/2D MPS Encoding/Python for MRI Data/: README.md  python_for_mri.ipynb
data/: dicts_data1.txt  dicts_data6.txt  dicts_data7.txt  dicts_data8.txt  img_data_size_1024_712.txt  img_data_size_1024_batch2.txt  img_data_size_1024_batch3.txt  img_data_size_1024_batch4.txt  img_data_size_1024_batch5.txt  img_data_size_1024_padded.txt
dev_test_folder/: Dataset_pipeline setup.ipynb  Dev_gen_block.ipynb  Save_comp_on_disk.py  Saving_MPS_on_disk.ipynb  Understanding_block_encoding.ipynb  compressionratio_list.pkl  dev_SSIM.ipynb  results_dict1.json  ssim_list.pkl
src/compression/: mps_ND.py  mps_ND_old.py  utils_ND.py
src/evaluation/: Data_evaluation.py  Dataset_pipeline setup.ipynb  Paper_eval.ipynb  benchmark.py  benchmark.sh  benchmark_old.py  cluster_benchmark.py  evaluate_pipeline.ipynb  evaluate_plots.py  run_benchmark.py
src/evaluation/results/: MRI_0_12_100steps_to_0.1_DCT.json  MRI_0_1_10steps_to_0.1_PSNR_test.json  MRI_0_to_10_100_steps_to_01.json  (+28 more)
src/imgcompressionmps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Nd_plot creation.ipynb  Nd_test.ipynb  conftest.py  pedestrians.ipynb  test.py
tests/core/: test_ndmps.py
tests/evaluation/: test_benchmark.py
tests/utils/: test_core.py  test_metrics.py
(+13 files in other folders)
