[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imgcompressionmps"
version = "0.1.0"
description = "Tensor-network based image compression for arbitrary shapes and dimensions"
authors = [{ name = "Alan Piovesana", email = "alan.albert.p@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["imgcompressionmps"]